// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid />  debe de mostrar los items cuando se cargan lasimagenes con useFetchGifs    1`] = `
<Fragment>
  <h2
    className="animate__wobble"
  >
    Neymar jr
  </h2>
  <div
    className="card-grid"
  >
    <GifItem
      id="1"
      key="1"
      title="cuno"
      url="https"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid />  debe mostrarse correctamente  1`] = `
<Fragment>
  <h2
    className="animate__wobble"
  >
    Neymar jr
  </h2>
  <p>
     Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
